--- a/ShopMagentoApi.Test/MagentoApi.Test.csproj
+++ b/ShopMagentoApi.Test/MagentoApi.Test.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="MagentoApiTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositoryTest.cs" />
+    <Compile Include="RepositoryServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MagentoRepository\MagentoComunication.csproj">
