Refactoring web form Catalogo

--- a/MagentoBusinessDelegate/MagentoBusinessDelegate.csproj
+++ b/MagentoBusinessDelegate/MagentoBusinessDelegate.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Cart.cs" />
     <Compile Include="Helpers\CartHelper.cs" />
+    <Compile Include="Helpers\ConfigurationHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
