--- a/ShopMagentoApi.Test/MagentoApi.Test.csproj
+++ b/ShopMagentoApi.Test/MagentoApi.Test.csproj
@@ -58,6 +58,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Cache\AspNetCacheManagerTest.cs" />
+    <Compile Include="CustomerTest.cs" />
     <Compile Include="MagentoApiTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryServiceTest.cs" />
