--- a/MA.Web/Web.config
+++ b/MA.Web/Web.config
@@ -7,7 +7,7 @@
     machine.config.comments che si trova in genere in 
     \Windows\Microsoft.Net\Framework\v2.x\Config 
 -->
-<configuration>
+<configuration>c
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     <sectionGroup name="fiftyOne">
@@ -66,7 +66,7 @@
   <connectionStrings>
     <add name="AccessFileName" connectionString="~/App_Data/ASPNetDB.mdb" providerName="System.Data.OleDb"/>
     <add name="ori_ConnectionString" connectionString="Data Source=.;AttachDbFilename=c:\DB_MsSql\MateraDB.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True" providerName="System.Data.SqlClient"/>
-    <add name="ConnectionString" connectionString="Data Source=.;Initial Catalog=MateraArredamenti;User ID=peppe;Password=peppe" providerName="System.Data.SqlClient"/>
+    <add name="ConnectionString" connectionString="Data Source=vy5e799jkl.database.windows.net;Initial Catalog=MateraArredamenti;User ID=peppe;Password=pa$$w0rd" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <membership defaultProvider="AccessMembershipProvider">
