--- a/MA.Web/Web.config
+++ b/MA.Web/Web.config
@@ -7,7 +7,7 @@
     machine.config.comments che si trova in genere in 
     \Windows\Microsoft.Net\Framework\v2.x\Config 
 -->
-<configuration>c
+<configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     <sectionGroup name="fiftyOne">
