Refactoring esito transaione

--- a/MagentoBusinessDelegate/MagentoBusinessDelegate.csproj
+++ b/MagentoBusinessDelegate/MagentoBusinessDelegate.csproj
@@ -45,6 +45,9 @@
   <ItemGroup>
     <Compile Include="Cart.cs" />
     <Compile Include="Helpers\CartHelper.cs" />
+    <Compile Include="Helpers\TemplatePlaceholder.cs" />
+    <Compile Include="LayoutBuilder.cs" />
+    <Compile Include="Enum\MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
