--- a/MA.Web/Web.config
+++ b/MA.Web/Web.config
@@ -10,6 +10,8 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="cachingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Caching.Configuration.CacheManagerSettings, Microsoft.Practices.EnterpriseLibrary.Caching, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true"/>
+    <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true"/>  
     <sectionGroup name="fiftyOne">
       <section name="log" type="FiftyOne.Foundation.Mobile.Configuration.LogSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication"/>
       <section name="redirect" type="FiftyOne.Foundation.Mobile.Configuration.RedirectSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication"/>
@@ -27,6 +29,16 @@
       </sectionGroup>
     </sectionGroup>
   </configSections>
+  <cachingConfiguration defaultCacheManager="Cache Manager">
+    <cacheManagers>
+      <add name="Cache Manager" type="Microsoft.Practices.EnterpriseLibrary.Caching.CacheManager, Microsoft.Practices.EnterpriseLibrary.Caching, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" expirationPollFrequencyInSeconds="60" maximumElementsInCacheBeforeScavenging="1000" numberToRemoveWhenScavenging="10" backingStoreName="Data Cache Storage"/>
+    </cacheManagers>
+    <backingStores>
+      <add name="Data Cache Storage" type="Microsoft.Practices.EnterpriseLibrary.Caching.Database.DataBackingStore, Microsoft.Practices.EnterpriseLibrary.Caching.Database, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" encryptionProviderName="" databaseInstanceName="MagentoCache" partitionName="cachemagento"/>
+      <add type="Microsoft.Practices.EnterpriseLibrary.Caching.BackingStoreImplementations.NullBackingStore, Microsoft.Practices.EnterpriseLibrary.Caching, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="NullBackingStore"/>
+    </backingStores>
+  </cachingConfiguration>
+  <dataConfiguration defaultDatabase="MagentoCache"/>
   <fiftyOne>
     <redirect timeout="20" firstRequestOnly="false" mobileHomePageUrl="~/Mobile/Default.aspx" mobilePagesRegex="/(Mobile|Tablet)/">
       <!--<locations>
@@ -64,9 +76,10 @@
     <add key="it.sella.ecomms2s.WSCryptDecrypt" value="https://ecomms2s.sella.it/gestpay/gestpayws/WSCryptDecrypt.asmx"/>
   </appSettings>
   <connectionStrings>
+    <add name="MagentoCache" connectionString="Data Source=.;Initial Catalog=Caching;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
     <add name="AccessFileName" connectionString="~/App_Data/ASPNetDB.mdb" providerName="System.Data.OleDb"/>
-    <add name="ori_ConnectionString" connectionString="Data Source=.;AttachDbFilename=c:\DB_MsSql\MateraDB.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True" providerName="System.Data.SqlClient"/>
-    <add name="ConnectionString" connectionString="Data Source=vy5e799jkl.database.windows.net;Initial Catalog=MateraArredamenti;User ID=peppe;Password=pa$$w0rd" providerName="System.Data.SqlClient"/>
+    <add name="ConnectionString" connectionString="Data Source=.;AttachDbFilename=c:\DB_MsSql\MateraDB.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True" providerName="System.Data.SqlClient"/>
+    <add name="_ConnectionString" connectionString="Data Source=vy5e799jkl.database.windows.net;Initial Catalog=MateraArredamenti;User ID=peppe;Password=pa$$w0rd" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <membership defaultProvider="AccessMembershipProvider">
@@ -186,6 +199,7 @@
         <assemblyIdentity name="System.Web.Extensions.Design" publicKeyToken="31bf3856ad364e35"/>
         <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/>
       </dependentAssembly>
+      <qualifyAssembly partialName="Microsoft.Practices.EnterpriseLibrary.Data" fullName="Microsoft.Practices.EnterpriseLibrary.Data, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
     </assemblyBinding>
   </runtime>
 </configuration>
