--- a/MagentoApi/Ez.Newsletter.MagentoApi.csproj
+++ b/MagentoApi/Ez.Newsletter.MagentoApi.csproj
@@ -39,7 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CookComputing.XmlRpcV2">
-      <HintPath>M:\Pepps\Sviluppo\MagentoApi\xml-rpc\bin\CookComputing.XmlRpcV2.dll</HintPath>
+      <HintPath>..\Libs\CookComputing.XmlRpcV2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
