--- a/MA.Web/packages.config
+++ b/MA.Web/packages.config
@@ -6,6 +6,8 @@
   <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net35" />
   <package id="EnterpriseLibrary.Security.Cryptography" version="5.0.505.0" targetFramework="net35" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net35" />
+  <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Unity" version="2.1.505.0" targetFramework="net35" />
   <package id="Unity.Interception" version="2.1.505.0" targetFramework="net35" />
 </packages>
