Fixed Dataset, added database create script

--- a/MA.Web/Web.config
+++ b/MA.Web/Web.config
@@ -67,7 +67,7 @@
   <connectionStrings>
     <add name="MagentoCache" connectionString="Data Source=.;Initial Catalog=Caching;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
     <add name="AccessFileName" connectionString="~/App_Data/ASPNetDB.mdb" providerName="System.Data.OleDb"/>
-    <add name="ConnectionString" connectionString="Data Source=.;AttachDbFilename=c:\DB_MsSql\MateraDB.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True" providerName="System.Data.SqlClient"/>
+    <add name="ConnectionString" connectionString="Data Source=.;Initial Catalog=MateraArredamenti;Integrated Security=True;" providerName="System.Data.SqlClient"/>
     <add name="_ConnectionString" connectionString="Data Source=vy5e799jkl.database.windows.net;Initial Catalog=MateraArredamenti;User ID=peppe;Password=pa$$w0rd" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
