--- a/MagentoBusinessDelegate/MagentoBusinessDelegate.csproj
+++ b/MagentoBusinessDelegate/MagentoBusinessDelegate.csproj
@@ -56,6 +56,10 @@
       <Name>MagentoComunication</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Sql Scripts\CreateCachingDatabase.sql" />
+    <Content Include="Sql Scripts\CreateDB.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
