Gestione immagini da magento

--- a/ShopMagentoApi.Test/App.config
+++ b/ShopMagentoApi.Test/App.config
@@ -17,5 +17,4 @@
     <connectionStrings> 
         <add name="MagentoCache" connectionString="Data Source=.;Initial Catalog=Caching;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
- 
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
