--- a/ShopMagentoApi.Test/MagentoApi.Test.csproj
+++ b/ShopMagentoApi.Test/MagentoApi.Test.csproj
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ShopMagentoApi.Test</RootNamespace>
     <AssemblyName>ShopMagentoApi.Test</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -86,10 +86,10 @@
   <ItemGroup>
     <Compile Include="Cache\AspNetCacheManagerTest.cs" />
     <Compile Include="CustomerTest.cs" />
-    <Compile Include="ELCacheApplicatoinBlockTest.cs" />
+    <Compile Include="ELCachingApplicatoinBlockTest.cs" />
     <Compile Include="MagentoApiTest.cs" />
     <Compile Include="OrderTest.cs" />
-    <Compile Include="Other Tests\LayoutBuilderTest.cs" />
+    <Compile Include="Other Tests\UsefulFunctionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryServiceTest.cs" />
     <Compile Include="CartTest.cs" />
