--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\MA.Shop.MVP\packages.config" />
   <repository path="..\MA.Web\packages.config" />
   <repository path="..\ShopMagentoApi.Test\packages.config" />
 </repositories>
