Organized solution to MVP

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,8 @@
 <repositories>
   <repository path="..\MA.Shop.MVP\packages.config" />
   <repository path="..\MA.Web\packages.config" />
+  <repository path="..\Shop.MVP.Core\packages.config" />
+  <repository path="..\Shop.MVP.Web\packages.config" />
+  <repository path="..\Shop.Web.Mvp\packages.config" />
   <repository path="..\ShopMagentoApi.Test\packages.config" />
 </repositories>
