--- a/MagentoRepository/MagentoComunication.csproj
+++ b/MagentoRepository/MagentoComunication.csproj
@@ -42,8 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache\FakeCacheManager.cs" />
-    <Compile Include="Cache\ICacheManager.cs" />
     <Compile Include="Connection\IMagentoConnection.cs" />
     <Compile Include="Enum\OrderStatus.cs" />
     <Compile Include="Helpers\ConfigurationHelper.cs" />
@@ -64,6 +62,10 @@
     <ProjectReference Include="..\MagentoApi\Ez.Newsletter.MagentoApi.csproj">
       <Project>{5f081b09-2791-4f75-b3b1-4396ca89e8b6}</Project>
       <Name>Ez.Newsletter.MagentoApi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Shop.Infrastructure\Shop.Infrastructure.csproj">
+      <Project>{ae8def92-6ca5-4fa0-91e6-fc1494c00954}</Project>
+      <Name>Shop.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
