--- a/Shop.Infrastructure/packages.config
+++ b/Shop.Infrastructure/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net35" />
   <package id="EnterpriseLibrary.Caching" version="5.0.505.0" targetFramework="net35" />
+  <package id="EnterpriseLibrary.Caching.Database" version="5.0.505.0" targetFramework="net35" />
   <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net35" />
+  <package id="EnterpriseLibrary.Data" version="5.0.505.0" targetFramework="net35" />
   <package id="Unity" version="2.1.505.0" targetFramework="net35" />
   <package id="Unity.Interception" version="2.1.505.0" targetFramework="net35" />
 </packages>
