--- a/Shop.MVP.Web/packages.config
+++ b/Shop.MVP.Web/packages.config
@@ -3,7 +3,9 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Caching" version="5.0.505.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Caching.Database" version="5.0.505.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Data" version="5.0.505.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
